--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,115 @@ table {
 	border-spacing: 0;
 }
 
+/* End of Reset */
+* {
+	font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+body {
+	display:flex;
+}
+
+#logoImageContainer {
+	width: 40%;
+	height: 100vh;
+	background-image: url("studio.jpg");
+	background-size: cover;
+	background-position: 20% 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+img {
+	max-width: 100%;
+	height: 100%;	
+}
+
+#logo {
+	text-align: center;
+	padding: 2vw 8vw;
+	margin-top: 15vw;
+	background-color: rgba(0, 0, 0, 0.344);
+}
+
+#credit {
+	text-align: center;
+	margin-bottom: 1vw;
+	color: rgb(237, 177, 46);
+}
+
+#credit>a {
+	color: rgb(237, 177, 46);
+}
+
+#content {
+	width: 60%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	background-color: #2C282D;
+	color: white;
+	
+}
+
+#content1 {
+	height: 35%;
+	padding: 5vw 14vw 0vw 3vw;
+	font-size: 28px;
+	font-weight: bold;
+	box-sizing: border-box;
+	
+}
+
+#content2 {
+	height: 35%;
+	padding: 2vw 14vw 2vw 3vw;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.387);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	box-sizing: border-box;
+	background-color: #252126;
+}
+
+#content3 {
+	padding: 2vw 14vw 2vw 3vw;
+	height: 30%;
+	box-sizing: border-box;
+}
+
+#login {
+	color: #BC3C0C;
+
+}
+
+h2 {
+	font-size: 28px;
+}
+
+#form {
+	font-size: 12px;
+	font-weight: bold;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2vw;
+	margin-top: 5px;
+}
+
+input {
+width: 16vw;
+height: 1.5vw;
+margin-top: 2px;
+}
+
+button {
+	width: 15vw;
+	height: 40px;
+	font-size: 16px;
+	border-radius: 6px;
+	border: none;
+	color: white;
+	background-color: #BC3C0C;
+	margin-bottom: 1vw;
+}
